# lib/db/src/models/User.ts
@@ -3,6 +3,7 @@ import mongoose, { Schema, type Document } from "mongoose";
 export interface IUser extends Document {
   name: string;
   email: string;
+  recoveryEmail: string;
   passwordHash: string;
   role: "admin" | "teacher" | "parent";
   securityQuestion1?: string | null;
@@ -18,6 +19,7 @@ const UserSchema = new Schema<IUser>(
   {
     name: { type: String, required: true },
     email: { type: String, required: true, unique: true },
+    recoveryEmail: { type: String, required: true, unique: true },
     passwordHash: { type: String, required: true },
     role: {
       type: String,
